# Cmake

./: CMakeLists_detailed.txt  CMakeLists_simple.txt  Readme.md  makefile  makefile_complex  makefile_simple
Examples/: CMakeLists_ex.txt  makefile_ex
Samples/: CMakeLists_simple.txt
my-project/: CMakeLists.txt
